# CoAgentics

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  env.template  fireStore.py  firebase  oceanic-throne-119418-a18e9e722dac.json
backend/: agent.py  main.py  main_in_memory_session.py  prompts.py  pyproject.toml  requirements.txt  session_manager.py
backend/agents/: master_planner_agent.py
backend/research/: context_analyzer.py
backend/services/: firebase_service.py
backend/sub_agents/clarifying_agent/: agent.py
backend/sub_agents/financial_advisor/: agent.py
backend/sub_agents/financial_assistant/: agent.py
backend/sub_agents/optimizer_assistant/: agent.py
backend/sub_agents/triage_agent/: agent.py
backend/tools/: financial_calculator.py  web_search_tool.py
client/: .dockerignore  API_PORT_FIX.md  Dockerfile  FIREBASE_SETUP.md  ONBOARDING_SETUP.md  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/app/: layout.tsx  page.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useVoiceRecording.ts
client/src/lib/: api.ts  firebase.ts  firestore.ts  utils.ts
deployment/gcp/: cloudbuild.yaml
deployment/scripts/: deploy.sh  local-dev.sh
fi-mcp-dev/test_data_dir/: 2222222222.rar
fi-mcp-server/: .dockerignore  Dockerfile
server/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
server/app/: .env.example  api.py  main.py  main2.py  wealthflow-ai.json
server/app/agents/: base.py
server/app/core/: config.py  database.py
(+67 files in other folders)
